Working Swagger Config, pagination, books GET endpoints
